[ui] fix navbar overlap

--- a/frappe/public/css/docs.css
+++ b/frappe/public/css/docs.css
@@ -48,7 +48,7 @@
 }
 @media (max-width: 767px) {
   .navbar-desk {
-    width: 50% !important;
+    width: 40% !important;
   }
 }
 #search-modal .modal-dialog,
